Bug 1599114 - Allow StrongOrRawPtr to accept RefPtr. r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D54533